# pylumerical

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.rst  codecov.yml  index.html  pyproject.toml  robots.txt  setup.py  sitemap.xml  versions.json
.github/: CODEOWNERS  ci_cd.yml  dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  ci_cd_main.yml  ci_cd_pr.yml  ci_cd_release.yml  common-build-test-package.yml  common-doc-build-lumerical.yml  common-tests-lumerical.yml  migrate-pr.yml
doc/: .vale.ini  Makefile
doc/source/: basic_session_management.py  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst
examples/: README.rst
examples/Multiple_Solver_Workflows/: Metalens_FDTD_with_projections.py
examples/Sessions and Objects/: basic_session_management.py  fdtd_example1_lsf.py  fdtd_example1_pythonic.py
examples/Sessions_and_Objects/: Waveguide_FDE.py  example1_session_management.py  fdtd_example1_lsf.py  fdtd_example1_pythonic.py  photonic_crystal_bandstructure.py
examples/Single_Solver_Workflows/: EME_edge_coupler.py  FDTD_nanowire.py  photonic_crystal_bandstructure.py  ring_resonator_interconnect.py  thermal_tuner_heat.py  waveguide_FDE.py
pull/124/: search.html
pull/131/: examples.html  objects.inv  py-modindex.html
pull/134/: contributing.html  examples.html  objects.inv  searchindex.js
pull/136/: changelog.html  contributing.html  examples.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
pull/138/: contributing.html  searchindex.js
pull/139/: examples.html  objects.inv  searchindex.js
pull/14/: changelog.html  contributing.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pull/141/: changelog.html  genindex.html  index.html  searchindex.js
pull/144/: examples.html  objects.inv
pull/18/: changelog.html
pull/19/: changelog.html  contributing.html  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
pull/21/: changelog.html  contributing.html  examples.html  genindex.html  index.html  search.html
pull/27/: changelog.html  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
pull/28/: changelog.html  contributing.html  examples.html  genindex.html  index.html  search.html
pull/33/: changelog.html  contributing.html  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
pull/44/: changelog.html  genindex.html  searchindex.js
pull/45/: contributing.html  examples.html
pull/46/: changelog.html  index.html  search.html  searchindex.js
pull/50/: changelog.html  contributing.html  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
pull/51/: changelog.html  contributing.html  examples.html  index.html  objects.inv
pull/63/: contributing.html  examples.html  genindex.html  objects.inv  search.html
pull/7/: searchindex.js
pull/78/: contributing.html  index.html  search.html  searchindex.js
pull/79/: changelog.html  examples.html  genindex.html
pull/80/: contributing.html
pull/81/: changelog.html  contributing.html  examples.html  genindex.html  index.html  search.html  searchindex.js
pull/82/: changelog.html  contributing.html  examples.html  genindex.html  index.html  search.html
pull/93/: contributing.html  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
pull/97/: changelog.html  examples.html  genindex.html  index.html  searchindex.js
tests/: conftest.py  test_FDTD_start_session.py  test_MODE_start_session.py  test_autodiscovery.py  test_lumopt2_import.py  test_lumopt2_project_setup.py  test_metadata.py  test_start_FDTD_session.py
tests/functional/: set_resources.py  test_fdtd_ar_coating_sweep.py  test_fdtd_nanowire_example.py  test_interconnect_monte_carlo_example.py
tests/integration/: conftest.py  test_device_object_property_access.py  test_device_simobject.py  test_fdtd_non_interactive_engine.py  test_fdtd_object_property_access.py  test_fdtd_simobject.py  test_interconnect_automatic_cml_reload.py  test_interconnect_object_property_access.py  test_mode_non_interactive_engine.py  test_mode_object_property_access.py
tests/unit/: fdtd_test.fsp  fdtd_test.lsf  fdtd_test.lsfx  test_app_call.py  test_bootstrap_lumopt2.py  test_dataset_translator.py  test_get_set_helper.py  test_lum_types.py  test_lum_warning.py  test_lumapi_GetSetHelper_object.py  test_lumapi_Lumerical_object_LumApiError.py  test_lumapi_Lumerical_object_eval_and_user_functions.py  test_lumapi_Lumerical_object_open_and_close.py  test_lumapi_Lumerical_object_putv_and_getv.py  test_lumapi_Matrix_Rectilinear_and_UnstructuredDatasetTranslator_objects.py  test_lumapi_PutTranslator_object_LumApiError.py  test_lumapi_SimObject_and_SimObjectResults_objects.py  test_lumapi_appCall_and_appCallWithConstructor_objects.py  test_lumapi_error.py  test_lumapi_lumTypes_function.py  test_lumapi_lumWarning_function.py  test_lumapi_open_and_close_functions.py  test_lumapi_open_close.py  test_lumapi_removePromptLineNo_function.py  test_lumapi_verifyConnection_function.py  test_lumerical_eval.py  test_lumerical_open_close.py  test_lumerical_putv_getv.py  test_put_translator_lumapi_error.py  test_remove_prompt_lineno.py  test_sim_object.py  test_suite_01__lumapi_appCall_and_appCallWithConstructor_objects.py  test_suite_02__lumapi_GetSetHelper_object.py  test_suite_03__lumapi_Lumerical_object_eval_and_user_functions.py  test_suite_04__lumapi_Lumerical_object_LumApiError.py  test_suite_05__lumapi_Lumerical_object_open_and_close.py  test_suite_06__lumapi_Lumerical_object_putv_and_getv.py  test_suite_07__lumapi_lumTypes_function.py  test_suite_08__lumapi_Matrix_Rectilinear_and_UnstructuredDatasetTranslator_objects.py  test_suite_09__lumapi_open_and_close_functions.py  (+7 more)
version/: index.html
version/0.1/: changelog.html  contributing.html  examples.html  genindex.html  index.html  search.html  searchindex.js
version/0.2/: changelog.html  (+5 more)
(+3856 files in other folders)
