[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-lumerical-core"
dynamic = ["version"]
description = "A Python API for Ansys Lumerical"
readme = "README.rst"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
tests = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
]
doc = [
    "ansys-sphinx-theme==1.4.2",
    "numpydoc==1.8.0",
    "sphinx==8.2.3",
    "sphinx-copybutton==0.5.2",
]


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.pydocstyle]
convention = "numpy"

[tool.coverage.run]
source = ["ansys.lumerical.core"]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
package = "ansys.lumerical.core"
directory = "doc/source/changelog"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/source/changelog/template"
title_format = "`{version} <https://github.com/ansys/ansys.lumerical.core/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/ansys.lumerical.core/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true
