[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-lumerical-core"
dynamic = ["version"]
description = "Python interface to Ansys Lumerical"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors=[
    {name="ANSYS, Inc.", email="pyansys.support@ansys.com"}
]
maintainers=[
    {name="PyAnsys developers", email="pyansys.core@ansys.com"}
]
keywords = ["Ansys", "Lumerical", "photonics", "simulation"]
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "ansys-api-lumerical",
    "numpy",
    "importlib-metadata >=4.0"
]

[project.optional-dependencies]
tests = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
]
doc = [
    "ansys-sphinx-theme==1.4.2",
    "numpydoc==1.8.0",
    "sphinx==8.2.3",
    "sphinx-copybutton==0.5.2",
]

[tool.flit.module]
name = "ansys.lumerical.core"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.pydocstyle]
convention = "numpy"

[tool.coverage.run]
source = ["ansys.lumerical"]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
package = "ansys.lumerical.core"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/ansys.lumerical.core/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/ansys.lumerical.core/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true